[package]
name = "runjs"
version = "0.1.0"
edition = "2024"
description = "A JavaScript/TypeScript runtime with chroot capabilities"
license = "MIT"

[lib]
name = "runjs"
path = "src/lib.rs"

[[bin]]
name = "runjs"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = []
bin = []

[dependencies]
deno_ast = { version = "0.48.0", features = ["transpiling"] }
deno_core = "0.350.0"
deno_error = "0.6.1"
reqwest = "0.12.18"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
tokio-test = "0.4.3"
anyhow = "1.0.81"
